# llm-experiments

demo_lora_multi_device/: .gitignore  README.md  hello.py  pyproject.toml
demo_lora_multi_device/config/: qwen_config.yaml
demo_lora_multi_device/data/: test.json
demo_lora_single_device/: README.md  hello.py  pyproject.toml
demo_lora_single_device/config/: qwen_config.yaml
demo_lora_single_device/recipes/: lora_single_device.py
demo_lora_single_device/scripts/: sample_chat_dataset.py  save_merged.py  test_adapter_hf.py  test_adapter_vllm.py  test_merged_model_hf.py  test_merged_model_vllm.py
vllm-with-uv/: README.md  main.py  pyproject.toml
