[project]
name = "demo-lora-multi-device"
version = "0.1.0"
description = "Testing lora fine tuning with torchtune, using a multi-device setup"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.6.0",
    "torchao>=0.8.0",
    "torchtune>=0.5.0",
    "torchvision>=0.21.0",
]
